--- a/npm.html
+++ b/npm.html
@@ -3,7 +3,7 @@
     <link rel="stylesheet" type="text/css" href="npm.css">
   </header>
 <body>
-
+<div>Something that looks like npm</div>
 </body>
   <div class="main">
     <div id="letters">npm</div>
