--- a/npm.html
+++ b/npm.html
@@ -1,11 +1,22 @@
-<!Doctype html>
-  <header>
-    <link rel="stylesheet" type="text/css" href="npm.css">
-  </header>
-<body>
-<div>Something that looks like npm</div>
-</body>
-  <div class="main">
-    <div id="letters">npm</div>
-  </div>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>npm</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+
+  <body>
+    <div id="bigRed"></div>
+    <div id="lilWht"></div>
+    <div id="wht1"></div>
+    <div id="wht2"></div>
+    <div id="wht3"></div>
+    <div id="lilRed1"></div>
+    <div id="lilRed2"></div>
+    <div id="lilRed3"></div>
+    <div id="lilRed4"></div>
+    <div id="lilRed5"></div>
+  </body>
 </html>
